[project]
name = "answering-machine"
version = "0.1.0"
description = "Lazy questions get lazy answers."
authors = [
    {name = "Kyle Walters",email = "kyle@jorkle.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyperclip (>=1.9.0,<2.0.0)",
    "openai (>=1.65.0,<2.0.0)"
]
[project.scripts]
answering-machine = "answering_machine.machine:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
